<resources>
    <string name="app_name">Safe Buddy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- day/night greetings-->
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>


    <!-- Strings used for the bottom nav view -->
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="store">Stores</string>
    <string name="my_profile">My profile</string>
    <string name="more">More</string>

    <!-- Strings used for create profile fragment-->
    <string name="create_profile_label">Create Profile</string>
    <string name="buy_now_pay_later">Buy now pay later</string>
    <string name="welcome">Welcome 👋</string>
    <string name="let_s_create_your_profile">Let\'s create your profile.</string>
    <string name="first_name">First Name</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="set_profile_picture">Set profile picture</string>
    <string name="last_name">Last Name</string>
    <string name="user_location">Location</string>
    <string name="btn_save">Save</string>
    <string name="need_help_contact_our">Need help? Contact our</string>
    <string name="customer_support">Customer Support</string>
    <string name="bank_id">Bank ID</string>
    <string name="profile_saved">Your profile has been successfully saved.</string>
    <string name="profile_created">Your profile has been created. Go to back to the home screen and enjoy our services.</string>
    <string name="profile_not_saved">Profile not saved.</string>
    <string name="profile_not_created">Sorry. Your profile has not created. Ensure you are well connected to the internet and try again. Contact customer support for help.</string>
    <string name="plz_wait">Please wait…</string>
    <string name="select_soc_acc">Select social media account type :</string>
    <string name="enter_name_soc_acc">Enter your user name:</string>
    <string name="soc_media_user_name">Account User Name</string>
    <string name="select_soc_med_acc">Select social media account</string> <!--This has been used
    to CHECK for selected social media account TYPE-->

    <string-array name="soc_media_accounts">
        <item>Select social media account</item>
        <item>Facebook</item>
        <item>Instagram</item>
        <item>Twitter</item>
    </string-array>

    <!-- Error text to raise when Saving user data-->
    <string name="err_firstname">Enter your first name</string>
    <string name="err_lastname">Enter your last name</string>
    <string name="err_bank_id">Enter your bank ID</string>
    <string name="err_user_location">Enter your location</string>
    <string name="err_no_image">Please select your profile picture</string>
    <string name="err_no_soc_acc_type">Select your social media account</string>
    <string name="err_no_soc_acc_name">Please enter your user name</string>

    <!-- Strings used for home fragment-->
    <string name="hello">Hello, </string>
    <string name="safe_buddy_background_image">Safe Buddy background image</string>
    <string name="username">UserName </string>
    <string name="emoji_hey">👋</string>
    <string name="day_night_greetings">Day/Night greetings</string>
    <string name="total_due_payment">Total due payment</string>
    <string name="_00_00">$00.00</string>
    <string name="amount_paid">Amount paid:</string>
    <string name="card_background_image">Card background image</string>
    <string name="your_upcoming_and_recent_installments_will_live_here">Your upcoming and recent installments will live here ⛺</string>
    <string name="safe_buddy_logo">Safe Buddy logo</string>
    <string name="upcoming_installments">Upcoming Installments</string>
    <string name="view_all">View all</string>
    <string name="previous_installments">Previous installments</string>

    <!-- Strings used for list_item_installments_home-->
    <string name="product_name">Product Name</string>
    <string name="installments">Installments</string>
    <string name="zero_over_zero">00/00</string>
    <string name="last_pay">Last Payment</string>
    <string name="_12_12_2022">12/12/2022</string>
    <string name="product_tag">Product Tag</string>
    <string name="more_information">More information</string>

    <!-- Strings used for stores fragment-->
    <string name="store_name">Store Name</string>
    <string name="store_logo_image">Store logo image</string>
    <!-- store names-->
    <string name="jumia">Jumia</string>
    <string name="amazon">Amazon</string>
    <string name="ebay">eBay</string>
    <string name="aliexpress">AliExpress</string>
    <string name="shopify">Shopify</string>

    <!-- Strings for notifications fragment-->
    <string name="no_notifications">Your upcoming notifications will be stored here. 📜 </string>

    <!-- String for MyProfile fragment-->
    <string name="create_profile">Create profile</string>
    <string name="please_create_your_profile_so_as_to_access_our_services">Please create your profile so as to access our services.</string>

</resources>