<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_round_notifications_24"
            android:title="@string/notifications" />

        <item
            android:id="@+id/myProfileFragment"
            android:icon="@drawable/ic_round_account_box_24"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/moreFragment"
            android:icon="@drawable/ic_baseline_more_24"
            android:title="@string/more" />
    </group
        >
</menu>